# Fifo-SystemC

./: LICENSE  README.md  fifoh.h  main.cpp
ALU/: alu.h  main.cpp
Counter/: Checking.h  main.cpp
counter/: .cproject  CMakeLists.txt  README  counter.kdev4
counter/.kdev4/: counter.kdev4
counter/cmake-files/: .cproject
counter/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.kdevelop  Project.kdevses  ackup.txt  cmake_install.cmake  hbackup
